<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartbar</string>
    <string name="action_settings">Settings</string>
    <string name="smart_bar">SMART BAR</string>
    <string name="smartbar">smartbar.</string>

    <!-- Startup Activity -->
    <string name="smart_bar_actionbar">Smart Bar</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">New User</string>
    <string name="sign_out_button_name">Sign Out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="personal_limitations">Personal Limitations</string>
    <string name="enter_missing_params">Please enter your missing parameters to continue.</string>
    <string name="missing_param">Missing Parameter</string>

    <!-- Login Activity -->
    <string name="login_actionbar">Log In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_login">Username</string>
    <string name="enter_password">Password (Must be 6 or more characters)</string>
    <string name="enter_pw">Password</string>
    <string name="email_hint">Username</string>
    <string name="reenter_pw">Confirm Password</string>

    <!-- New User Activity -->
    <string name="new_user_actionbar">Create Account</string>
    <string name="welcome_new_user1">Welcome to Smart Bar!</string>
    <string name="welcome_new_user2">Please enter a user login and password.</string>
    <string name="verify_button">Register</string>
    <string name="enter_age">Age</string>
    <string name="enter_sex">Sex</string>
    <string name="enter_email">Email Address</string>
    <string name="reenter_password">Re-Enter Password</string>

    <!-- Welcome Activity -->
    <string name="welcome">Hello!</string>
    <string name="configure_payment">Please configure your payment settings before proceeding to the Smarbar Drink Library!</string>
    <string name="setup_payment_button">Setup Payment</string>
    <string name="bac_button">Check Last BAC Reading</string>

    <!-- Library Browse Activity -->
    <string name="library_browse_actionbar">Choose Drink</string>
    <string name="enter_drink">What would you like to drink?</string>
    <string name="drink_hint">ex: Whiskey Ginger</string>
    <string name="order_button">Order</string>

    <!-- Confirmation Activity -->
    <string name="confirmation_actionbar">Confirm Order</string>
    <string name="order_confirmation1">So, you\'d like to order a</string>
    <string name="order_confirmation">{drink_order}</string>
    <string name="order_confirmation2">is this correct?</string>
    <string name="order_drink_button">Yes, Order Drink</string>
    <string name="change_order_button">Change Order</string>
    <string name="customize">Customize Drink</string>
    <string name="tequila">Tequila</string>
    <string name="rum">Rum</string>
    <string name="vodka">Vodka</string>
    <string name="gin">Gin</string>

    <!-- Order Confirmed Activity -->
    <string name="done">Done!</string>
    <string name="drink_sent">Your drink order has been sent!
        Proceed to the SmartBar touch screen interface to pick up your order.</string>
    <string name="thank_you">Thank you!</string>
    <string name="back_to_library_button">Back to Drink Library</string>
    <string name="uber_button">Request an Uber</string>
    <string name="lyft_button">Request a Lyft</string>

    <!-- ActionBar Menu -->
    <string name="action_logout">Logout</string>
    <string name="action_pin">Display Number</string>
    <string name="dismiss">Dismiss</string>
    <string name="action_forgot_user">Forgot Username</string>
    <string name="action_forgot_pass">Forgot Password</string>
    <string name="oauth_button">Sign in with Gmail</string>
    <string name="oauth_login">Secure Authentication</string>
    <string name="title_activity_missing_params">MissingParamsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_resetFP">Reset Fingerprint</string>
    <string name="title_activity_braintree">BraintreeActivity</string>
    <string name="title_activity_ready_to_order">Smartbar</string>

    <!-- ReadyToOrder Activity -->
    <string name="please_click_order">Click order to see what\'s currently in the Smartbar inventory!</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <string name="aboutSB">About Smartbar</string>
    <string name="sb_lower">smartbar</string>
    <string name="payment_welcome">Welcome!</string>
    <string name="empty"></string>


</resources>
