<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_missing_params"
    android:background="@drawable/appbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MissingParamsActivity" >

    <TextView
        android:id="@+id/missing_param_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/personal_limitations"
        android:textColor="@color/bt_white"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <View
        android:id="@+id/bar_separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"/>

    <TextView
        android:id="@+id/missing_param_message"
        android:text="@string/enter_missing_params"
        android:textColor="@color/bt_white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/missing_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_age"
        android:textColor="@color/bt_white"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/enter_missing_age"
        android:textColor="@color/bt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="" />

    <TextView
        android:id="@+id/missing_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_sex"
        android:textColor="@color/bt_white"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/enter_missing_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bt_white"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/done_button"
        style="@style/PinKey"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/done" />

</LinearLayout>