<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ready_to_order"
    android:background="@drawable/appbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".ReadyToOrderActivity" >

    <TextView
        android:id="@+id/welcome_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/welcome"
        android:textColor="@color/bt_white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcome_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/please_click_order"
        android:textColor="@color/bt_white"
        android:textSize="20sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/order_button"
        style="@style/PinKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/order_button"
        android:onClick="goToLibraryBrowse" />

</LinearLayout>
