<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:background="@drawable/appbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".PaymentActivity" >

    <TextView
        android:id="@+id/welcome_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/payment_welcome"
        android:typeface="serif"
        android:textColor="@color/bt_white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <View
        android:id="@+id/bar_separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"/>

    <TextView
        android:id="@+id/welcome_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/configure_payment"
        android:textColor="@color/bt_white"
        android:textSize="20sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/payment_button"
        style="@style/PinKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/setup_payment_button"
        android:typeface="serif"
        android:onClick="requestBraintree" />

</LinearLayout>
