<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:background="@drawable/appbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

        <TextView
            android:id="@+id/login_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/welcome_back"
            android:typeface="serif"
            android:textColor="@color/bt_white"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp" />

        <View
            android:id="@+id/bar_separator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="#C0C0C0"/>

        <TextView
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_login"
            android:typeface="serif"
            android:textColor="@color/bt_white"
            android:labelFor="@+id/type_email"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/type_email"
            android:typeface="serif"
            android:textColor="@color/bt_white"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pw"
            android:typeface="serif"
            android:textColor="@color/bt_white"
            android:labelFor="@+id/type_password"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/type_password"
            android:textColor="@color/bt_white"
            android:inputType="textPassword"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/login_button"
            style="@style/PinKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_button"
            android:typeface="serif"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />

</LinearLayout>
